--- a/eks_cicd/deployment.yaml
+++ b/eks_cicd/deployment.yaml
@@ -8,7 +8,7 @@ metadata:
     app.kubernetes.io/managed-by: kubectl
   name: cicd-demo-deployment
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: cicd-demo
@@ -18,7 +18,7 @@ spec:
         app: cicd-demo
     spec:
       containers:
-        - image: 120717539064.dkr.ecr.us-west-2.amazonaws.com/cicd-demo:latest
+        - image: 062873744679.dkr.ecr.us-east-1.amazonaws.com/cicd-demo:latest
           imagePullPolicy: Always
           name: cicd-demo
           ports:
